--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 </main>
 <footer>
-  <div class="container-fluid bg-secondary rounded  text-center   " > <p class="p-2">Так же занимаемся многими другими работами как на выезде так и у себя на сервисе звоните узнавайте, телефон вверху.</p></div>
+  <div class="container-fluid  rounded  mr-3 text-center   " style = "background-color : #D8D8D4";> <p class="p-2">Так же занимаемся многими другими работами как на выезде так и у себя на сервисе звоните узнавайте, телефон вверху.</p></div>
 
 </footer>
 </div>
