--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
        <div class="col p-1">
         <div class="card mb-4 rounded-3 shadow-sm border-dark ">
-          <div class="card-header py-3 " style = "background-color : #FFE574"; >
+          <div class="card-header py-3 " style = "background-color : #F2D86F"; >
             <h4 class="my-0 fw-normal">Заглохли в дороге?</h4>
           </div>
           <div class="card-body">
@@ -85,7 +85,7 @@
 
      <div class="col p-1">
       <div class="card mb-4 rounded-3 shadow-sm border-dark ">
-        <div class="card-header py-3  " style = "background-color : #9BFFA7"; >
+        <div class="card-header py-3  " style = "background-color : #8BE596"; >
           <h4 class="my-0 fw-normal">Проблемы с движением?</h4>
         </div>
         <div class="card-body">
